Refactor services and repositories; update project structure
- Added necessary `using` directives in `Program.cs` for EF Core, IdentityModel Tokens, and various services.
- Removed empty `Class1` classes from `RoofTool.Application`, `RoofTool.Domain`, and `RoofTool.Infrastructure`.
- Introduced `IMeasurementService`, `IOpportunityService`, and `IPropertyService` interfaces.
- Implemented `MeasurementService`, `OpportunityService`, and `PropertyService` classes.
- Updated `RoofTool.Application.csproj` to reference `RoofTool.Infrastructure`.
- Modified `Opportunity` class to make `Property` nullable and added `CreatedAt` property.
- Moved enums and value objects from `Enums.cs` to separate files.
- Introduced `IMeasurementRepository`, `IOpportunityRepository`, and `IPropertyRepository` interfaces.
- Implemented `MeasurementRepository`, `OpportunityRepository`, and `PropertyRepository` classes.
- Added `RoofToolDbContext` class to define the database context.

--- a/RoofTool.Application/RoofTool.Application.csproj
+++ b/RoofTool.Application/RoofTool.Application.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RoofTool.Domain\RoofTool.Domain.csproj" />
+    <ProjectReference Include="..\RoofTool.Infrastructure\RoofTool.Infrastructure.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
