--- a/RoofTool.API/appsettings.Development.json
+++ b/RoofTool.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=RoofToolDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost;Database=RoofToolDb;Username=postgres;Password=YourStrong!Passw0rd;"
   }
 }
