fix: Addressed issue with the migration in the Infrastructure. Also cleaned up the tests to have better coverage. Updated the config for the Jwt to comes from the appsettings. Also added coverage but still working out issues with mac usage.

--- a/RoofTool.API/appsettings.Development.json
+++ b/RoofTool.API/appsettings.Development.json
@@ -6,6 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=RoofToolDb;Username=postgres;Password=YourStrong!Passw0rd;"
+    "DefaultConnection": "Host=localhost;Database=RoofToolDb;Username=postgres;Password=YourStrong!Passw0rd;"
+  },
+  "Jwt": {
+    "SecretKey": "YourSuperSecretKeyIsNotQuiteLongEnoughForThis",
+    "Issuer": "RoofToolIssuer",
+    "Audience": "RoofToolAudience",
+    "TokenExpiryHours": "1"
   }
 }
