--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,10 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=db;Database=RoofToolDb;Username=postgres;Password=YourStrong!Passw0rd;
+      - Jwt__SecretKey=YourSuperSecretKeyIsNotQuiteLongEnoughForThis
+      - Jwt__Issuer=RoofToolIssuer
+      - Jwt__Audience=RoofToolAudience
+      - Jwt__TokenExpiryHours=1
     depends_on:
       - db
     ports:
