--- a/RoofTool.API/appsettings.json
+++ b/RoofTool.API/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=RoofToolDb;Trusted_Connection=True;"
+    "DefaultConnection": "Host=localhost;Database=RoofToolDb;Username=postgres;Password=YourStrong!Passw0rd;"
+  },
+  "Jwt": {
+    "SecretKey": "YourSuperSecretKeyIsNotQuiteLongEnoughForThis",
+    "Issuer": "RoofToolIssuer",
+    "Audience": "RoofToolAudience",
+    "TokenExpiryHours": "1"
   }
 }
