feat: Add RoofTool.ServiceDefaults project and integrate service defaults into the API for health, retry, telemetry, and prepare for AppHost.

--- a/RoofTool.API/RoofTool.API.csproj
+++ b/RoofTool.API/RoofTool.API.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RoofTool.Application\RoofTool.Application.csproj" />
+    <ProjectReference Include="..\RoofTool.ServiceDefaults\RoofTool.ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
